--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -3,33 +3,135 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="HealthApp.MainPage">
 
+    <ContentPage.Background>
+        <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+            <GradientStop Color="#624E88" Offset="0.0" />
+            <GradientStop Color="#8967B3" Offset="0.25" />
+            <GradientStop Color="#CB80AB" Offset="0.65" />
+            <GradientStop Color="#E6D9A2" Offset="1.0" />
+        </LinearGradientBrush>
+    </ContentPage.Background>
+
     <ScrollView>
         <VerticalStackLayout
-            Padding="30,0"
+            Padding="30,40"
             Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
 
             <Label
-                Text="Hello, World!"
+                Text="Добрий день!"
+                 FontAttributes="Bold"
                 Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
+                SemanticProperties.HeadingLevel="Level1"/>
 
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+            <Frame BackgroundColor="AliceBlue"
+               CornerRadius="20"
+               BorderColor="Transparent"
+               HasShadow="False"
+               Padding="10"
+               Margin="10"
+               HorizontalOptions="FillAndExpand"
+               VerticalOptions="Center"
+               HeightRequest="100">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Label
+        Text="ІМТ:"
+                        TextColor="Black"
+        Style="{StaticResource SubHeadline}"
+        SemanticProperties.HeadingLevel="Level2"
+         Margin="0,0,0,0"
+        Grid.Row="0" Grid.Column="1"/>
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+                    <Label
+        Text="XX.X"
+                        TextColor="Black"
+        Style="{StaticResource SubHeadline}"
+        SemanticProperties.HeadingLevel="Level2"
+         Margin="0,0,0,0"
+        Grid.Row="0" Grid.Column="2"/>
+
+                    <Label
+        Text="Ціль:"
+                        TextColor="Black"
+        Style="{StaticResource SubHeadline}"
+        SemanticProperties.HeadingLevel="Level2"
+        Margin="0,0,0,0"
+        Grid.Row="1" Grid.Column="1"/>
+                    <Label
+        Text="XX.X"
+                        TextColor="Black"
+        Style="{StaticResource SubHeadline}"
+        SemanticProperties.HeadingLevel="Level2"
+        Margin="0,0,0,0"
+        Grid.Row="1" Grid.Column="2"/>
+
+                </Grid>
+
+            </Frame>
+
+            
+
+            <Image
+                Source="cat_icon.png"
+                HeightRequest="185"
+                Aspect="AspectFit" />
+
+            <Frame BackgroundColor="AliceBlue"
+       CornerRadius="20"
+       BorderColor="Transparent"
+       HasShadow="False"
+       Padding="10"
+       HorizontalOptions="FillAndExpand"
+       VerticalOptions="Center"
+       HeightRequest="200">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="4*" />
+                        <ColumnDefinition Width="1*" />
+                    </Grid.ColumnDefinitions>
+
+                    <Label 
+        Text="Води випито:" 
+                        TextColor="Black"
+        HorizontalOptions="Start" 
+        HorizontalTextAlignment="Start" 
+        Grid.Row="0" Grid.Column="0" 
+        Style="{StaticResource SubHeadline}" 
+        SemanticProperties.HeadingLevel="Level2"/>
+
+                    <Label 
+        Text="Тут буде колись показувати" 
+                        TextColor="Black"
+        HorizontalOptions="Start" 
+        HorizontalTextAlignment="Start" 
+        Grid.Row="1" Grid.Column="0" 
+        Style="{StaticResource SubHeadline}" 
+        SemanticProperties.HeadingLevel="Level2"/>
+
+                    <Label 
+        Text="+" 
+                        TextColor="Black"
+        Grid.Row="1" Grid.Column="1" 
+        Style="{StaticResource SubHeadline}" 
+        SemanticProperties.HeadingLevel="Level1"/>
+                </Grid>
+
+            </Frame>
+            
+
         </VerticalStackLayout>
     </ScrollView>
 
