--- a/ConsumingPage.xaml
+++ b/ConsumingPage.xaml
@@ -12,124 +12,137 @@
         </LinearGradientBrush>
     </ContentPage.Background>
 
-    <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
+    <ScrollView>
+        <VerticalStackLayout
+        Padding="30,0"
+        Spacing="25">
 
-        <Frame BackgroundColor="AliceBlue"
-                   CornerRadius="30"
-                   BorderColor="Transparent"
-                   MaximumWidthRequest="500"
-                   HasShadow="False"
-                   Padding="10"
-                   Margin="0,35,0,0"
-                   HorizontalOptions="FillAndExpand"
-                   VerticalOptions="Center">
+            <Frame BackgroundColor="AliceBlue"
+               CornerRadius="30"
+               BorderColor="Transparent"
+               MaximumWidthRequest="500"
+               HasShadow="False"
+               Padding="10"
+               Margin="0,35,0,0"
+               HorizontalOptions="FillAndExpand"
+               VerticalOptions="Center">
 
-            <Grid Padding="10">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="5*" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+                <Grid Padding="10">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="6*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
 
-                <Label
-                        Text="Мої медикаменти:"
-                        TextColor="#593E99"
-                        FontAttributes="Bold"
-                        FontSize="20"
-                        HorizontalTextAlignment="Start"
-                        Margin="0,0,0,0"
-                        Grid.Row="0" Grid.Column="0"/>
+                    <Label
+                Text="Мої медикаменти"
+                TextColor="#593E99"
+                FontAttributes="Bold"
+                FontSize="20"
+                HorizontalTextAlignment="Center"
+                VerticalTextAlignment="Center"
+                Margin="0,0,0,0"
+                Grid.Row="0" Grid.Column="1"/>
 
-                <Image Source="circle.png" Grid.Row="0" Grid.Column="3" HeightRequest="30" WidthRequest="30"/>
+                    <Button 
+                Text="···" FontAttributes="Bold" FontFamily="Tahoma"
+                BackgroundColor="AliceBlue" TextColor="#313E77" FontSize="25"
+                Margin="0, -5, 0, -5"
+                Padding="-5"
+                IsEnabled="True" WidthRequest="20" HeightRequest="20" CornerRadius="50"
+                Grid.Row="0" Grid.Column="2">
+                    </Button>
 
-            </Grid>
+                </Grid>
 
-        </Frame>
+            </Frame>
 
-        <BoxView Color="AliceBlue"
-                     HeightRequest="10"
-                     MaximumWidthRequest="350"
-                     CornerRadius="20"
-                     HorizontalOptions="Fill"/>
+            <BoxView Color="AliceBlue"
+                 HeightRequest="10"
+                 MaximumWidthRequest="350"
+                 CornerRadius="20"
+                 HorizontalOptions="Fill"/>
 
-        <Frame BackgroundColor="AliceBlue"
-                   CornerRadius="30"
-                   BorderColor="Transparent"
-                   MaximumWidthRequest="500"
-                   HasShadow="False"
-                   Padding="10"
-                   HorizontalOptions="FillAndExpand"
-                   VerticalOptions="Center">
+            <Frame BackgroundColor="AliceBlue"
+               CornerRadius="30"
+               BorderColor="Transparent"
+               MaximumWidthRequest="500"
+               HasShadow="False"
+               Padding="10"
+               HorizontalOptions="FillAndExpand"
+               VerticalOptions="Center">
 
-            <Grid Padding="10">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="3*" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+                <Grid Padding="10">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="3*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
 
-                <Label Text="Прийняти сьогодні:"
-                           TextColor="#593E99"
-                           FontAttributes="Bold"
-                           FontSize="20"
-                           HorizontalTextAlignment="Center"
-                           Margin="0,0,0,0"
-                           Grid.Row="0" Grid.Column="1"
-                           ></Label>
+                    <Label Text="Прийняти сьогодні:"
+                       TextColor="#593E99"
+                       FontAttributes="Bold"
+                       FontSize="20"
+                       HorizontalTextAlignment="Center"
+                       Margin="0,0,0,10"
+                       Grid.Row="0" Grid.Column="1"
+                       ></Label>
 
-                <ScrollView Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3">
-                    <Frame BackgroundColor="Lavender"
-                           CornerRadius="30"
-                           BorderColor="Transparent"
-                           HeightRequest="400"
-                           MaximumHeightRequest="400"
-                           MaximumWidthRequest="500"
-                           HasShadow="False"
-                           Padding="10"
-                           HorizontalOptions="FillAndExpand"
-                           VerticalOptions="Center"
-                           Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3">
+                    <ScrollView Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3">
+                        <Frame BackgroundColor="Lavender"
+                       CornerRadius="30"
+                       BorderColor="Transparent"
+                       HeightRequest="400"
+                       MaximumHeightRequest="400"
+                       MaximumWidthRequest="500"
+                       HasShadow="False"
+                       Padding="10"
+                       HorizontalOptions="FillAndExpand"
+                       VerticalOptions="Center"
+                       Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3">
 
-                        <Grid x:Name="TodayMedList" ColumnSpacing="10" RowSpacing="10">
+                            <Grid x:Name="TodayMedList" ColumnSpacing="10" RowSpacing="10">
 
-                            <!-- оце видалю перед написанням бека -->
+                                <!-- оце видалю перед написанням бека -->
 
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
 
-                            <Label Text="Елемент 1" TextColor="#593E99" Grid.Row="0" Grid.Column="0"/>
-                            <Label Text="Елемент 2" TextColor="#593E99" Grid.Row="0" Grid.Column="1"/>
-                            <Label Text="Елемент 3" TextColor="#593E99" Grid.Row="1" Grid.Column="0"/>
-                            <Label Text="Елемент 4" TextColor="#593E99" Grid.Row="1" Grid.Column="1"/>
-                            <Label Text="Елемент 5" TextColor="#593E99" Grid.Row="2" Grid.Column="0"/>
-                        </Grid>
+                                <Label Text="Елемент 1" TextColor="#593E99" Grid.Row="0" Grid.Column="0"/>
+                                <Label Text="Елемент 2" TextColor="#593E99" Grid.Row="0" Grid.Column="1"/>
+                                <Label Text="Елемент 3" TextColor="#593E99" Grid.Row="1" Grid.Column="0"/>
+                                <Label Text="Елемент 4" TextColor="#593E99" Grid.Row="1" Grid.Column="1"/>
+                                <Label Text="Елемент 5" TextColor="#593E99" Grid.Row="2" Grid.Column="0"/>
+                            </Grid>
 
-                    </Frame>
-                </ScrollView>
+                        </Frame>
+                    </ScrollView>
 
-            </Grid>
+                </Grid>
 
-        </Frame>
+            </Frame>
 
-    </VerticalStackLayout>
+        </VerticalStackLayout>
+    </ScrollView>
+    
 
 </ContentPage>
