--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -19,12 +19,23 @@
             Padding="25,20"
             Spacing="20">
 
-            <Label
-                Text="Добрий день, name!"
-                FontAttributes="Bold"
-                TextColor="AliceBlue"
-                FontSize="25"
-                HorizontalTextAlignment="Center"/>
+            <HorizontalStackLayout HorizontalOptions="Center" Spacing="10">
+                <Label
+                    x:Name="timeOfDayLabel"
+                    Text="Добрий день,"
+                    FontAttributes="Bold"
+                    TextColor="AliceBlue"
+                    FontSize="25"
+                    HorizontalTextAlignment="Center"/>
+                <Label
+                    x:Name="userNameLabel"
+                    Text="name"
+                    FontAttributes="Bold"
+                    TextColor="AliceBlue"
+                    FontSize="25"
+                    HorizontalTextAlignment="Center"/>
+            </HorizontalStackLayout>
+            
 
             <Frame BackgroundColor="AliceBlue"
                CornerRadius="30"
@@ -59,6 +70,7 @@
                         Grid.Row="0" Grid.Column="1"/>
 
                     <Label
+                        x:Name="currentIndexLabel"
                         Text="XX.X"
                         TextColor="#593E99"
                         FontSize="20"
@@ -68,6 +80,7 @@
                         Grid.Row="0" Grid.Column="2"/>
 
                     <Button 
+                        x:Name="changeIndexButton"
                         Text="···" FontAttributes="Bold" FontFamily="Tahoma"
                         BackgroundColor="AliceBlue" TextColor="#313E77" FontSize="25"
                         Margin="0, -5, 0, -5"
@@ -92,6 +105,7 @@
                         Margin="20,0,0,0"
                         Grid.Row="2" Grid.Column="1"/>
                     <Label
+                        x:Name="targetWeightLabel"
                         Text="XX.X"
                         TextColor="#593E99"
                         FontSize="20"
@@ -99,6 +113,7 @@
                         Margin="20,0,0,0"
                         Grid.Row="2" Grid.Column="2"/>
                     <Button 
+                        x:Name="changeTargetButton"
                         Text="···" FontAttributes="Bold" FontFamily="Tahoma"
                         Margin="0, -5, 0, -5"
                         Padding="-5"
